--- a/alternating.html
+++ b/alternating.html
@@ -1,30 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cookie Store</title>
-  </head>
-  <body>
-    <main>
-      <h2>Our Cookies</h2>
-      <p>Checkout our latest and delicious cookies.</p>
 
-      <h3>Mint Chocolate</h3>
-      <p>Tasty mint chocolate cookies</p>
-      <img src="images/mint-cookie.png" alt="A single mint chocolate cookie" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Cookie Store</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <style>
+    img {
+      border-radius: 65%;
+    }
 
-      <h3>Peanut Butter</h3>
-      <p>Yummy peanut buttery goodness</p>
-      <img src="images/peanut-cookie.png" alt="A single peanut butter cookie" />
+    body {
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .row{
+      margin-top:3%;
+      margin-bottom:3%;
+      padding-bottom: 2%;
+    }
+    h3{
+      justify-content:center;
+      align-items: center;
+      padding-top:100px;
+      
+      inset:0;
+    }
+    text{
+      text-align: center;
+    }
+  </style>
+</head>
 
-      <h3>Oatmeal</h3>
-      <p>Your fitness instructors favorite</p>
-      <img src="images/oatmeal-cookie.png" alt="A single oatmeal cookie" />
+<body>
+  <main>
+    <div class="container">
+      <div class="row">
 
-      <h3>Chocolate Chip</h3>
-      <p>Gooey chocolate you'll love</p>
-      <img src="images/chip-cookie.png" alt="A single chocolate chip cookie" />
-    </main>
-  </body>
+        <div style="text-align:center; " class="cookie-text col-sm-12 col-md-12 col-lg-12">
+          <h2>Our Cookies</h2>
+          <p>Checkout our latest and delicious cookies.</p>
+        </div>
+        </div>
+
+        <div class="row">
+        <!-- <div class="mint-chocolate col col-sm-12"> -->
+          <div class="text col-sm-3 offset-md-2 col-md-5 order-md-3">
+            <h3>Mint Chocolate</h3>
+            <p>Tasty mint chocolate cookies</p>
+          </div>
+          <div class="col-sm-9  col-md-3 offset-md-2">
+            <img src="images/mint-cookie.png" alt="A single mint chocolate cookie" />
+          </div>
+        <!-- </div> -->
+      </div>
+
+      <div class="row">
+        <!-- <div class="peanut-butter col col-sm-12"> -->
+          <div class="text col-sm-3 col-md-5 offset-md-2">
+            <h3>Peanut Butter</h3>
+            <p>Yummy peanut buttery goodness</p>
+          </div>
+          <div class="col-sm-9 col-md-5">
+            <img src="images/peanut-cookie.png" alt="A single peanut butter cookie" />
+          </div>
+        </div>
+      <!-- </div> -->
+
+        <div class="row">
+        <!-- <div class="oatmeal col col-sm-12"> -->
+          <div class="text col-sm-3 offset-md-2 col-md-5 order-md-3">
+            <h3>Oatmeal</h3>
+            <p>Your fitness instructors favorite</p>
+          </div>
+          <div class="col-sm-9  col-md-3 offset-md-2 order-md-0">
+            <img src="images/oatmeal-cookie.png" alt="A single oatmeal cookie" />
+          </div>
+        <!-- </div> -->
+      </div>
+        
+      <div class="row">
+        <!-- <div class="chocolate-chip col col-sm-12"> -->
+          <div class="text col-sm-3 col-md-5 offset-md-2">
+            <h3>Chocolate Chip</h3>
+            <p>Gooey chocolate you'll love</p>
+          </div>
+          <div class="col-sm-9 col-md-5">
+            <img src="images/chip-cookie.png" alt="A single chocolate chip cookie" />
+          </div>
+        <!-- </div> -->
+
+
+      </div>
+    </div>
+  </main>
+</body>
+
 </html>
